# REX-BOT-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BETA_GAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  FIXPLAN.md  Makefile  PROMPT_SAFETY_AUDIT.md  README.md  RELEASE.md  RISK_REGISTER.md  STATUS.md  WORKLOG.md  coverage.json  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  rex-launcher.sh
.github/workflows/: ci.yml
TEST ME/REX-BOT-AI-main/: .dockerignore  .env.example  .gitignore  BETA_GAP.md  LICENSE  RISK_REGISTER.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt  uninstall.sh
docs/: API-REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEV-TESTING.md  KB_SAFETY.md  PLUGIN-SDK.md  PROMPT_SAFETY.md  QUICK-START.md  SECURITY.md  TRUST_BOUNDARIES.md
frontend/: .npmrc  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
rex/: __init__.py
rex/bark/: formatter.py  manager.py  service.py
rex/brain/: baseline.py  classifier.py  decision.py  llm.py  prompts.py  service.py
rex/core/: __init__.py  cli.py  health.py  mode_manager.py  orchestrator.py  tier_detector.py
rex/dashboard/: __init__.py  app.py  auth.py  data_registry.py  deps.py  service.py  websocket.py
rex/eyes/: __init__.py  device_store.py  dns_monitor.py  fingerprinter.py  port_scanner.py  scanner.py  service.py  traffic.py
rex/federation/: __init__.py  gossip.py  privacy.py  service.py  sharing.py
rex/interview/: __init__.py  engine.py  processor.py  question_bank.py  service.py
rex/memory/: __init__.py  knowledge.py  service.py  threat_log.py  vector_store.py  versioning.py
rex/pal/: __init__.py  base.py  bsd.py  detector.py  docker_helper.py  linux.py  macos.py  windows.py
rex/scheduler/: __init__.py  cron.py  power.py  scan_scheduler.py  service.py
rex/shared/: __init__.py  audit.py  bus.py  config.py  constants.py  datetime_compat.py  enums.py  errors.py  events.py  fileutil.py  models.py  service.py  subprocess_util.py  types.py  utils.py
rex/store/: manager.py  registry.py  sandbox.py  service.py
rex/teeth/: __init__.py  dns_blocker.py  firewall.py  service.py
scripts/: dev-setup.sh  docker-smoke-test.sh
tests/: conftest.py
tests/regressions/: prompt_injection_payloads.json
tests/test_bark/: test_bark_service.py  test_channels_coverage.py  test_email_channel.py  test_formatter.py  test_formatter_coverage.py  test_manager.py  test_manager_coverage.py  test_service.py  test_telegram_channel.py  test_webpush_coverage.py
tests/test_brain/: test_baseline_coverage.py  test_baseline_final_coverage.py  test_brain_service.py  test_brain_service_coverage.py  test_classifier.py  test_classifier_coverage.py  test_decision.py  test_decision_coverage.py  test_decision_extended.py  test_llm.py  test_llm_coverage.py  test_llm_final_coverage.py  test_prompts.py
tests/test_core/: test_action_registry.py  test_action_validator.py  test_agent_security.py  test_audit_coverage.py  test_cli_api_contract.py  test_cli_commands.py  test_cli_coverage.py  test_cli_hardening.py  test_command_executor.py  test_command_executor_coverage.py  test_command_executor_extended.py  test_confirmation_coverage.py  test_confirmation_manager.py  test_egress_firewall.py  test_egress_firewall_coverage.py  test_encryption_coverage.py  test_feedback_tracker.py  test_feedback_tracker_coverage.py  test_health.py  test_message_authenticator.py  test_message_authenticator_coverage.py  test_message_router.py  test_message_router_coverage.py  test_mode_manager.py  test_orchestrator.py  test_orchestrator_coverage.py  test_privacy.py  test_privacy_audit.py  test_privacy_audit_coverage.py  test_scope_enforcer.py  test_tier_detector.py  test_web_content_sanitizer.py  test_web_sanitizer_coverage.py
tests/test_dashboard/: test_api_contracts.py  test_app.py  test_auth.py  test_auth_bootstrap.py  test_auth_coverage.py  test_dashboard_service.py  test_data_registry_coverage.py  test_deps.py  test_new_endpoints.py  test_router_auth.py  test_router_config.py  test_router_interview.py  test_router_interview_coverage.py  test_router_kb_coverage.py  test_router_knowledge_base.py  test_router_notifications.py  test_router_plugins_coverage.py  test_router_schedule.py  test_routers.py  test_websocket.py  test_websocket_coverage.py  test_websocket_extended.py
tests/test_eyes/: test_device_store.py  test_device_store_coverage.py  test_dns_monitor.py  test_dns_monitor_coverage.py  test_eyes_service.py  test_eyes_service_coverage.py  test_fingerprinter.py  test_fingerprinter_coverage.py  test_port_scanner.py  test_port_scanner_coverage.py  test_scanner.py  test_scanner_coverage.py  test_traffic.py  test_traffic_coverage.py
tests/test_federation/: test_federation_service.py  test_federation_service_coverage.py  test_privacy_coverage.py  test_sharing_coverage.py
tests/test_integration/: test_app_startup.py  test_command_contract.py  test_eventbus_wal.py  test_pipeline.py  test_redis_live.py  test_smoke.py
tests/test_interview/: test_engine.py  test_engine_coverage.py  (+4 more)
(+456 files in other folders)
